# Trader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  STATUS.md  cloud.env.example  developer_dashboard.html  pyproject.toml  render.yaml  start_project.ps1
architecture/: ALPACA_INACTIVITY_ROOT_CAUSE_REPORT.md  ALPACA_RECONCILIATION_CONTRACT.md  ALWAYS_ON_FOUNDER_BRIEFING.md  ALWAYS_ON_OPERATIONS_ARCHITECTURE.md  ALWAYS_ON_RESEARCH_ACTIVATION.md  ALWAYS_ON_RUNTIME_FORENSIC_AUDIT.md  ALWAYS_ON_TESTING_REPORT.md  APPLICATION_FLOW.md  ARCHITECTURE.md  AUTOMATIC_REPORTING_VERIFICATION.md  AUTONOMOUS_ACTIVITY_API.md  AUTONOMOUS_ACTIVITY_ARCHITECTURE.md  AUTONOMOUS_ACTIVITY_DATA_MAPPING.md  AUTONOMOUS_ACTIVITY_LIVE_VERIFICATION.md  AUTONOMOUS_LEARNING_WORKFLOW.md  AUTONOMOUS_OPERATIONS_AUDIT.md  AUTONOMOUS_OPERATIONS_COMPLETION_REPORT.md  AUTONOMOUS_PRODUCTION_SPINE.md  AUTONOMOUS_QUALIFICATION_REPORT.md  AUTONOMOUS_RESEARCH_VERIFICATION.md  AUTONOMOUS_SERVICE_INVENTORY.md  BROKER_ARCHITECTURE.md  BROKER_RECONCILIATION_COMPLETION.md  BROKER_RECONCILIATION_STANDARD.md  CANONICAL_RECONCILIATION_DESIGN.md  CANONICAL_TRADE_AND_LEARNING.md  CLOSED_LOOP_LEARNING_ARCHITECTURE.md  CTO_HANDOVER.md  DATABASE_ARCHITECTURE.md  DATABASE_REFERENCE.md  DATA_AVAILABILITY_AND_UNKNOWN_VALUES_STANDARD.md  ENVIRONMENT_VARIABLE_AUDIT.md  EQUITY_RESEARCH_SCHEDULING_STANDARD.md  EXPERIENCE_ENGINE_AND_GOVERNED_LEARNING.md  FOUNDER_ACTIVITY_SCREEN_GUIDE.md  FOUNDER_AI_STANDARD.md  FOUNDER_AUDIT_BRIEFING.md  FOUNDER_BRIEFING.md  FOUNDER_BRIEFING_SPRINT_6.md  FOUNDER_COMPLETION_BRIEFING.md  (+70 more)
(+116 files in other folders)
